Sigil v0.1.7 <ADD DATE>
    - fixed a rare issue with false spaces being inserted into words during import (issue #139)
    - the Views can now be scrolled by one line up/down by pressing CTRL+Up/Down (issue #72)
    - the About dialog now links to the online version of the GPLv3
    - made viewport switching more robust; the rare crashes should now become much rarer

Sigil v0.1.6 2009.12.06.
    - added a "Report An Issue" menu entry to the Help menu; opens a web browser and goes to the
    "ReportingIssues" wiki page on Sigil's website
    - fixed an issue with empty NavMap generation in the NCX if the file had no headings;
    the epub specification forbids empty NavMaps (issue #174)
    - fixed an issue with the document not being marked as modified in the GUI if the user only
    changed the document's metadata (issue #189)
    - fixed a rare bug with searching for a string that is at the very end of a document (issue #181)
    - new "Remove Formatting" WYSIWYG action (issue #56)
    - Sigil now preserves ALL HTML entity references (it used to convert most to Unicode equivalents);
    this change was necessary since soft hyphens were becoming "invisible" (issue #186)
    - implemented "blockquote" support through new WYSIWYG actions: "Indent Less" and
    "Indent More" (issue #41)
    - updating Qt fixed an issue with images wrapped in SVG tags not being shown (issue #91)
    - updated Qt from 4.5.2 to 4.6.0
    - fixed an issue with regex matching in Code View when such regexes referenced line
    endings with "\n" (issue #182)
    - PageUp and PageDown keys now work in Book View (issue #130)
    - fixed a crash invoked on switching views and searching in Book View when the caret 
    element's parent has HTML comment children (issue #179)
    - "Replace All" is now treated as a single undo/redo operation *in Code View*
    - tentatively fixed a problem with bad TOC generation if the input file had multiple headings